--- a/HTTP/请求数据.md
+++ b/HTTP/请求数据.md
@@ -548,3 +548,338 @@ let absolute = new URL(relative, frame.contentWindow.location.href)
 
 # Response
 
+ [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) 的 `Response` 接口呈现了对一次请求的响应数据。
+
+你可以使用 [`Response.Response()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/Response) 构造函数来创建一个 `Response` 对象，但通常更可能遇到的情况是，其他的API操作返回了一个 Response 对象。例如一个service worker 的 [`Fetchevent.respondWith`](https://developer.mozilla.org/zh-CN/docs/Web/API/FetchEvent/respondWith)，或者一个简单的 [`GlobalFetch.fetch()`](https://developer.mozilla.org/zh-CN/docs/Web/API/fetch)。
+
+## [构造函数](https://developer.mozilla.org/zh-CN/docs/Web/API/Response#构造函数)
+
+- [`Response()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/Response)
+
+  创建一个新的 `Response` 对象。
+
+`**Response()**` 构造函数创建了一个新的 [`Response`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response) 对象.
+
+### [语法](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/Response#语法)
+
+```js
+let myResponse = new Response(body, init);
+```
+
+### [参数](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/Response#参数)
+
+- *body* 可选
+
+  一个定义 response 中 body 的对象. 可以为 `null` ，或是以下其中一个:[`Blob`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob)[`BufferSource` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/BufferSource)[`FormData`](https://developer.mozilla.org/zh-CN/docs/Web/API/FormData)[`ReadableStream`](https://developer.mozilla.org/zh-CN/docs/Web/API/ReadableStream)[`URLSearchParams`](https://developer.mozilla.org/zh-CN/docs/Web/API/URLSearchParams)[`USVString`](https://developer.mozilla.org/zh-CN/docs/Web/API/USVString)
+
+- *init* 可选
+
+  一个参数(options)对象，包含要应用到 response 上的任何自定义设置. 可能参数(options)是:
+
+  `status`: response 的状态码, 例如:`200`.
+
+  `statusText`: 和状态码关联的状态消息, 例如: `OK`.
+
+  `headers`: 你想加到 response 上的任何 headers, 包含了一个 [`Headers`](https://developer.mozilla.org/zh-CN/docs/Web/API/Headers) 对象或满足对象语法的 [`ByteString`](https://developer.mozilla.org/zh-CN/docs/conflicting/Web/JavaScript/Reference/Global_Objects/String) key/value 对 (详见 [HTTP headers](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers)).
+
+## [例子](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/Response#例子)
+
+在我们的 [Fetch Response 示例](https://github.com/mdn/fetch-examples/tree/gh-pages/fetch-response)中 (参见[Fetch Response live](https://mdn.github.io/fetch-examples/fetch-response/)) 我们使用构造函数创建了一个新的Response 对象，传递一个新的 [`Blob`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob) 作为 body, 和一个包含自定义 `status` 和`statusText`的 init 对象:
+
+```js
+var myBlob = new Blob();
+var init = { "status" : 200 , "statusText" : "SuperSmashingGreat!" };
+var myResponse = new Response(myBlob,init);
+```
+
+## [属性](https://developer.mozilla.org/zh-CN/docs/Web/API/Response#属性)
+
+- [`Response.headers`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/headers) 只读
+
+  包含此 Response 所关联的 [`Headers`](https://developer.mozilla.org/zh-CN/docs/Web/API/Headers) 对象。
+
+- [`Response.ok`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/ok) 只读
+
+  包含了一个布尔值，标示该 Response 成功（HTTP 状态码的范围在 200-299）。
+
+- [`Response.redirected`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/redirected) 只读
+
+  表示该 Response 是否来自一个重定向，如果是的话，它的 URL 列表将会有多个条目。
+
+- [`Response.status`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/status) 只读
+
+  包含 Response 的状态码 （例如 `200` 表示成功）。
+
+- [`Response.statusText`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/statusText) 只读
+
+  包含了**与该 Response 状态码一致的状态信息**（例如，OK对应 `200`）。
+
+- [`Response.type`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/type) 只读
+
+  包含 Response 的类型（例如，`basic`、`cors`）。
+
+- [`Response.url`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/url) 只读
+
+  包含 Response 的URL。
+
+- `Response.useFinalURL`
+
+  包含了一个布尔值，来标示这是否是该 Response 的最终 URL。
+
+`Response` 实现了 `Body` 接口，所以以下属性亦可用：
+
+- [`Body.body` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/body) 只读
+
+  一个简单的 getter，用于暴露一个 [`ReadableStream`](https://developer.mozilla.org/zh-CN/docs/Web/API/ReadableStream) 类型的 body 内容。
+
+- [`Body.bodyUsed` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/bodyUsed) 只读
+
+  包含了一个[`布尔值` (en-US)](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)来标示该 Response 是否读取过 `Body`。
+
+## [方法](https://developer.mozilla.org/zh-CN/docs/Web/API/Response#方法)
+
+- [`Response.clone()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/clone)
+
+  创建一个 `Response` 对象的克隆。
+
+- [`Response.error()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/error)
+
+  返回一个绑定了网络错误的新的 `Response` 对象。
+
+- [`Response.redirect()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/redirect)
+
+  用另一个 URL 创建一个新的 `Response`。
+
+`Response` 实现了 `Body` 接口，所以以下方法同样可用：
+
+- [`Body.arrayBuffer()` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/arrayBuffer)
+
+  读取 [`Response`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response) 对象并且将它设置为已读（因为 Responses 对象被设置为了 stream 的方式，所以它们只能被读取一次），**并返回一个被解析为 [`ArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer) 格式的 Promise 对象。**
+
+- [`Body.blob()` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/blob)
+
+  读取 [`Response`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response) 对象并且将它设置为已读（因为 Responses 对象被设置为了 stream 的方式，所以它们只能被读取一次），**并返回一个被解析为 [`Blob`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob) 格式的 Promise 对象。**
+
+- [`Body.formData()` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/formData)
+
+  读取[`Response`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response) 对象并且将它设置为已读（因为 Responses 对象被设置为了 stream 的方式，所以它们只能被读取一次），**并返回一个被解析为 [`FormData`](https://developer.mozilla.org/zh-CN/docs/Web/API/FormData) 格式的 Promise 对象。**
+
+- [`Body.json()` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/json)
+
+  读取 [`Response`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response) 对象并且将它设置为已读（因为 Responses 对象被设置为了 stream 的方式，所以它们只能被读取一次），**并返回一个被解析为 `JSON` 格式的 Promise 对象。**
+
+- [`Body.text()` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/text)
+
+  读取 [`Response`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response) 对象并且将它设置为已读（因为 Responses 对象被设置为了 stream 的方式，所以它们只能被读取一次），**并返回一个被解析为 [`USVString`](https://developer.mozilla.org/zh-CN/docs/Web/API/USVString) 格式的 Promise 对象。**
+
+你也可以使用 [`Response.Response()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response/Response) 这样的构造方法，来创建自定义的 `Response` 对象：
+
+```js
+const response = new Response();
+```
+
+## [示例](https://developer.mozilla.org/zh-CN/docs/Web/API/Response#示例)
+
+在我们的[基础实例](https://github.com/mdn/fetch-examples/tree/gh-pages/basic-fetch) ([点击运行](https://mdn.github.io/fetch-examples/basic-fetch/)) 中 , 我们使用了一个简单的函数调用 , 调用了 `fetch()` 函数来获取一张图片并将其显示在 HTML 的 IMG 标签中 , `fetch()` 函数返回了一个 Promise，它使用与资源获取操作相关联的 Response 对象进行解析. 你会注意到，由于我们正在请求一张图片，我们需要运行[`Body.blob` (en-US)](https://developer.mozilla.org/en-US/docs/Web/API/Response/blob)（[`Response`](https://developer.mozilla.org/zh-CN/docs/Web/API/Response) 实现了），以为响应提供正确的 MIME 类型。
+
+```js
+const image = document.querySelector('.my-image');
+
+fetch('flowers.jpg').then(function(response) {
+  return response.blob();
+}).then(function(blob) {
+  const objectURL = URL.createObjectURL(blob);
+  image.src = objectURL;
+});
+```
+
+---
+
+
+
+# Blob
+
+`Blob` 对象表示一个**不可变、原始数据的类文件对象**。它的数据可以按文本或二进制的格式进行读取，也可以转换成 [`ReadableStream`](https://developer.mozilla.org/zh-CN/docs/Web/API/ReadableStream) 来用于数据操作。 
+
+Blob 表示的不一定是JavaScript原生格式的数据。[`File`](https://developer.mozilla.org/zh-CN/docs/Web/API/File) 接口基于`Blob`，继承了 blob 的功能并将其扩展使其支持用户系统上的文件。
+
+要从其他非blob对象和数据构造一个 `Blob`，请使用 [`Blob()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/Blob) 构造函数。要创建一个 blob 数据的子集 blob，请使用 [`slice()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/slice) 方法。要获取用户文件系统上的文件对应的 `Blob` 对象，请参阅 [`File`](https://developer.mozilla.org/zh-CN/docs/Web/API/File) 文档。
+
+接受 `Blob` 对象的API也被列在 [`File`](https://developer.mozilla.org/zh-CN/docs/Web/API/File) 文档中。
+
+**注意：**`slice()` 方法原本接受 `length` 作为第二个参数，以表示复制到新 `Blob` 对象的字节数。如果设置的参数使 `start + length` 超出了源 `Blob` 对象的大小，则返回从开始到结尾的所有数据。
+
+> **注意：**`slice()` 方法在某些浏览器和版本上带有浏览器引擎前缀：比如 Firefox 12 及更早版本的`blob.mozSlice()` 和 Safari 中的`blob.webkitSlice()`。 没有浏览器引擎前缀的老版本 `slice()` 方法有不同的语义，并且已过时。Firefox 30 取消了对 `blob.mozSlice()` 的支持。
+
+## [构造函数](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob#构造函数)
+
+- [`Blob(blobParts[, options\])`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/Blob)
+
+  返回一个新创建的 `Blob` 对象，其内容由参数中给定的数组串联组成。
+
+## [属性](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob#属性)
+
+- [`Blob.size`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/size) 只读
+
+  `Blob` 对象中**所包含数据的大小（字节）**。
+
+- [`Blob.type`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/type) 只读
+
+  一个字符串，**表明该 `Blob` 对象所包含数据的 MIME 类型**。如果类型未知，则该值为空字符串。
+
+## [方法](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob#方法)
+
+- [`Blob.slice([start[, end[, contentType\]]])`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/slice)
+
+  返回一个新的 `Blob` 对象，包含了源 `Blob` 对象中指定范围内的数据。
+
+- [`Blob.stream()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/stream)
+
+  返回一个能读取blob内容的 [`ReadableStream`](https://developer.mozilla.org/zh-CN/docs/Web/API/ReadableStream)。
+
+- [`Blob.text()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/text)
+
+  返回一个promise且包含blob所有内容的UTF-8格式的 [`USVString`](https://developer.mozilla.org/zh-CN/docs/Web/API/USVString)。
+
+- [`Blob.arrayBuffer()`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/arrayBuffer)
+
+  返回一个promise且包含blob所有内容的二进制格式的 [`ArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer) 
+
+## [示例](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob#示例)
+
+### [Blob 构造函数用法举例](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob#blob_构造函数用法举例)
+
+[`Blob() 构造函数`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob/Blob)允许通过其它对象创建 Blob 对象。比如，用字符串构建一个 blob：
+
+```js
+  let debug = {hello: "world"};
+  let blob = new Blob([JSON.stringify(debug, null, 2)], {type: "application/json"});
+  console.log(blob.size);  // 22
+```
+
+> [`BlobBuilder`](https://developer.mozilla.org/zh-CN/docs/Web/API/BlobBuilder) 接口提供了另外一种创建`Blob` 对象的方式，但该方式现在已经废弃，不应继续使用：
+
+```
+var builder = new BlobBuilder();
+var fileParts = ['<a id="a"><b id="b">hey!</b></a>'];
+builder.append(fileParts[0]);
+var myBlob = builder.getBlob('text/xml');
+```
+
+### [示例：使用 Blob 创建一个指向类型化数组的URL](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob#示例：使用_blob_创建一个指向类型化数组的url)
+
+参考下面的代码：
+
+```js
+var typedArray = GetTheTypedArraySomehow();
+var blob = new Blob([typedArray.buffer], {type: 'application/octet-stream'}); // 传入一个合适的 MIME 类型
+var url = URL.createObjectURL(blob);
+// 会产生一个类似 blob:d3958f5c-0777-0845-9dcf-2cb28783acaf 这样的URL字符串
+// 你可以像使用普通 URL 那样使用它，比如用在 img.src 上。
+```
+
+### [示例：从 Blob 中提取数据](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob#示例：从_blob_中提取数据)
+
+一种从Blob中读取内容的方法是使用 [`FileReader`](https://developer.mozilla.org/zh-CN/docs/Web/API/FileReader)。以下代码将 Blob 的内容作为类型数组读取：
+
+```js
+var reader = new FileReader();
+reader.addEventListener("loadend", function() {
+   // reader.result 包含被转化为类型数组 typed array 的 blob
+});
+reader.readAsArrayBuffer(blob);
+```
+
+另一种读取Blob中内容的方式是使用Response对象。下述代码将Blob中的内容读取为文本：
+
+```js
+var text = await (new Response(blob)).text();
+```
+
+通过使用 [`FileReader`](https://developer.mozilla.org/zh-CN/docs/Web/API/FileReader) 的其它方法可以把 Blob 读取为字符串或者数据URL。
+
+---
+
+# URL API
+
+URL API是一个URL标准的组件，它定义了有效的[Uniform Resource Locator](https://developer.mozilla.org/zh-CN/docs/Glossary/URL)和访问、操作URL的API。URL标准还定义了像域名、主机和IP地址等概念，并尝试以标准的方式去描述用于以键/值对的形式提交web表单内容的遗留`application/x-www-form-urlencoded` [MIME type](https://developer.mozilla.org/zh-CN/docs/Glossary/MIME_type) 。
+
+## [URL的概念和用法](https://developer.mozilla.org/zh-CN/docs/Web/API/URL_API#url的概念和用法)
+
+URL标准的主要内容是由URL的定义以及它的结构和解析方式决定的。还介绍了与网络上计算机寻址有关的各种术语的定义，**并指定了解析IP地址和DOM地址的算法**。大多数开发人员更感兴趣的是API本身。
+
+### [使用URL组件](https://developer.mozilla.org/zh-CN/docs/Web/API/URL_API#使用url组件)
+
+给指定的URL创建一个 [`URL`](https://developer.mozilla.org/zh-CN/docs/Web/API/URL) 对象将解析URL并通过其属性对其组成部分的快速访问。
+
+```js
+  let addr = new URL("https://developer.mozilla.org/zh-CN/docs/Web/API/URL_API");
+  let host = addr.host;
+  let path = addr.pathname;
+  console.log(host);  // developer.mozilla.org
+  console.log(path);  // /zh-CN/docs/Web/API/URL_API
+```
+
+上面的代码片段为您正在阅读的文章创建一个`URL`对象，然后获取 [`host`](https://developer.mozilla.org/zh-CN/docs/Web/API/URL/host) 和 [`pathname`](https://developer.mozilla.org/zh-CN/docs/Web/API/URL/pathname) 属性。在本例中，这些字符串的值分别是`developer.mozilla.org` 和`/zh-CN/docs/Web/API/URL_API`。
+
+### [修改URL](https://developer.mozilla.org/zh-CN/docs/Web/API/URL_API#修改url)
+
+`URL`对象的大部分属性都是可设置的；您可以向它们写入新值来更改对象所表示的URL。例如，要创建一个URL对象并设置它的用户名：
+
+```js
+  let myUsername = "kop";
+  let addr = new URL("https://mysite.com/login");
+  addr.username = myUsername;
+  console.log(addr.href);  // https://kop@mysite.com/login
+```
+
+设置 [`username`](https://developer.mozilla.org/zh-CN/docs/Web/API/URL/username) 值不仅是设置该属性的值，而且更新整个URL。执行上面的代码片段后， [`addr.href`](https://developer.mozilla.org/zh-CN/docs/Web/API/URL/href) 的返回值是`https://kop@mysite.com/login`。对于任何可写属性都是如此。
+
+### [查询](https://developer.mozilla.org/zh-CN/docs/Web/API/URL_API#查询)
+
+ [`search`](https://developer.mozilla.org/zh-CN/docs/Web/API/URL/search) 属性在URL上包含URL的查询字符串部分。例如，如果URL是`https://mysite.com/login?user=someguy&page=news`，那么`search` 属性的值是`?user=someguy&page=news`。您还可以使用 [`URLSearchParams`](https://developer.mozilla.org/zh-CN/docs/Web/API/URLSearchParams) 对象的 [`get()`](https://developer.mozilla.org/zh-CN/docs/Web/API/URLSearchParams/get) 查找单个参数的值：
+
+```js
+  let addr = new URL("https://mysite.com/login?user=someguy&page=news");
+  try {
+    loginUser(addr.searchParams.get("user"));
+    gotoPage(addr.searchParams.get("page"));
+  } catch(err){
+    showErrorMessage(err);
+  }
+```
+
+例如，在上面的代码片段中，从查询中提取用户名和目标页面，并将其传递给适当的函数，站点代码使用这些函数登录并将用户路由到站点的目的页面。
+
+`URLSearchParams`中的其他函数允许修改改、添加和删除键和值，甚至对参数列表进行排序。
+
+## [例子](https://developer.mozilla.org/zh-CN/docs/Web/API/URL_API#例子)
+
+如果希望处理URL中包含的参数，可以手动进行处理，但是创建一个URL对象更容易。下面的`fillTableWithParameters()`函数接受一个表示[``](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/table)的  [`HTMLTableElement`](https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLTableElement) 对象作为输入。将行添加到表中，每个行对应参数中找到的键，第一列包含键，第二列包含值。
+
+注意，在生成表之前调用 [`URLSearchParams.sort()`](https://developer.mozilla.org/zh-CN/docs/Web/API/URLSearchParams/sort) 对参数列表进行排序。
+
+​     
+
+```js
+function fillTableWithParameters(tbl) {
+  let url = new URL(document.location.href);
+  url.searchParams.sort();
+  let keys = url.searchParams.keys();
+
+  for (let key of keys) {
+    let val = url.searchParams.get(key);
+    let row = document.createElement("tr");
+    let cell = document.createElement("td");
+    cell.innerText = key;
+    row.appendChild(cell);
+      
+    cell = document.createElement("td");
+    cell.innerText = val;
+      
+    row.appendChild(cell);
+    tbl.appendChild(row);
+  };
+}
+```
+
