--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -12473,6 +12473,191 @@ console.log(result);
 1 <= nums.length <= 2 * 104
 -109 <= nums[i] <= 109
 
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var findLHS = function(nums) {
+    let m = new Map();
+    let ans = 0;
+    for (let i = 0; i < nums.length; i++){
+        m.set(nums[i], m.has(nums[i]) ? m.get(nums[i]) + 1 : 1);
+        //m.set(nums[i], (m.get(nums[i]) || 0) + 1);
+    }
+    for (let [key, val] of m.entries()){
+        //不用考虑 key - 1,因为 一定会遍历到
+        if (m.has(key + 1)) {
+            ans = Math.max(ans, val + m.get(key + 1));
+        }
+    }
+    return ans;
+};
+
+let nums = [1,3,2,2,5,2,3,7];
+let result = findLHS(nums);
+console.log(result);
+```
+
+---
+
+## 595. 大的国家
+
+World 表：
+
+```
++-------------+---------+
+| Column Name | Type    |
++-------------+---------+
+| name        | varchar |
+| continent   | varchar |
+| area        | int     |
+| population  | int     |
+| gdp         | int     |
++-------------+---------+
+```
+
+name 是这张表的主键。
+这张表的每一行提供：国家名称、所属大陆、面积、人口和 GDP 值。
+
+
+如果一个国家满足下述两个条件之一，则认为该国是 大国 ：
+
+面积至少为 300 万平方公里（即，3000000 km2），或者
+人口至少为 2500 万（即 25000000）
+编写一个 SQL 查询以报告 大国 的国家名称、人口和面积。
+
+按 任意顺序 返回结果表。
+
+查询结果格式如下例所示。
+
+ 
+
+示例：
+
+输入：
+World 表：
+
+```
++-------------+-----------+---------+------------+--------------+
+
+| name | continent | area | population | gdp  |
+| ---- | --------- | ---- | ---------- | ---- |
+|      |           |      |            |      |
+
++-------------+-----------+---------+------------+--------------+
+
+| Afghanistan | Asia | 652230 | 25500100 | 20343000000 |
+| ----------- | ---- | ------ | -------- | ----------- |
+|             |      |        |          |             |
+
+| Albania | Europe | 28748 | 2831741 | 12960000000 |
+| ------- | ------ | ----- | ------- | ----------- |
+|         |        |       |         |             |
+
+| Algeria | Africa | 2381741 | 37100000 | 188681000000 |
+| ------- | ------ | ------- | -------- | ------------ |
+|         |        |         |          |              |
+
+| Andorra | Europe | 468  | 78115 | 3712000000 |
+| ------- | ------ | ---- | ----- | ---------- |
+|         |        |      |       |            |
+
+| Angola | Africa | 1246700 | 20609294 | 100990000000 |
+| ------ | ------ | ------- | -------- | ------------ |
+|        |        |         |          |              |
+
++-------------+-----------+---------+------------+--------------+
+```
+
+输出：
+
+```
++-------------+------------+---------+
+| name        | population | area    |
++-------------+------------+---------+
+| Afghanistan | 25500100   | 652230  |
+| Algeria     | 37100000   | 2381741 |
++-------------+------------+---------+
+```
+
+```mysql
+select name, population, area from World where area >= 3000000 or population >= 25000000;
+```
+
+---
+
+## 596. 超过5名学生的课
+
+表: Courses
+
+```
++-------------+---------+
+| Column Name | Type    |
++-------------+---------+
+| student     | varchar |
+| class       | varchar |
++-------------+---------+
+```
+
+(student, class)是该表的主键列。
+该表的每一行表示学生的名字和他们注册的班级。
+
+
+编写一个SQL查询来报告 至少有5个学生 的所有课。
+
+以 任意顺序 返回结果表。
+
+查询结果格式如下所示。
+
+ 示例 1:
+
+输入: 
+Courses table:
+
+```
++---------+----------+
+| student | class    |
++---------+----------+
+| A       | Math     |
+| B       | English  |
+| C       | Math     |
+| D       | Biology  |
+| E       | Math     |
+| F       | Computer |
+| G       | Math     |
+| H       | Math     |
+| I       | Math     |
++---------+----------+
+```
+
+输出: 
+
+```
++---------+ 
+| class   | 
++---------+ 
+| Math    | 
++---------+
+```
+
+解释: 
+-数学课有6个学生，所以我们包括它。
+-英语课有1名学生，所以我们不包括它。
+-生物课有1名学生，所以我们不包括它。
+-计算机课有1个学生，所以我们不包括它。
+
+```mysql
+select class from 
+	(select class, count(DISTINCT student) as num 
+     from courses group by class) as temp_table 
+where num >=5;
+```
+
+---
+
+
+
 ```
 
 ```
@@ -15772,6 +15957,77 @@ class UnionFind {
         return this.onEdge[this.find(i)];
     }
 }
+
+```
+
+---
+
+## 1021. 删除最外层的括号
+
+有效括号字符串为空 ""、"(" + A + ")" 或 A + B ，其中 A 和 B 都是有效的括号字符串，+ 代表字符串的连接。
+
+例如，""，"()"，"(())()" 和 "(()(()))" 都是有效的括号字符串。
+如果有效字符串 s 非空，且不存在将其拆分为 s = A + B 的方法，我们称其为原语（primitive），其中 A 和 B 都是非空有效括号字符串。
+
+给出一个非空有效字符串 s，考虑将其进行原语化分解，使得：s = P_1 + P_2 + ... + P_k，其中 P_i 是有效括号字符串原语。
+
+对 s 进行原语化分解，删除分解中每个原语字符串的最外层括号，返回 s 。
+
+提示：
+
+1 <= s.length <= 105
+s[i] 为 '(' 或 ')'
+s 是一个有效括号字符串
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var removeOuterParentheses = function(s) {
+    let stack = [];
+    let ans = "";
+    for (let i = 0; i < s.length; i++){
+        let c = s[i];
+        if (c === ")") {
+            stack.pop();
+        }
+        //在遇到 ‘)’ 并将栈顶字符出栈后，如果栈为空，则不把字符放入结果
+        if (stack.length){
+            //其他情况下，需要把字符放入结果
+            ans += c;
+        }
+        //在遇到 ‘(’ 并将字符入栈后，如果栈的深度为 1，则不把字符放入结果
+        if (c === "(") {
+            stack.push(c);
+        }
+    }
+    return ans;
+};
+
+let s = "(()())(())";
+let result = removeOuterParentheses(s);
+console.log(result);
+```
+
+```js
+var removeOuterParentheses = function(s) {
+    let level = 0;
+    let res = '';
+    for (let i = 0; i < s.length; i++) {
+        const c = s[i];
+        if (c === ')') {
+            level--;
+        }
+        if (level > 0) {
+            res += c;
+        }
+        if (c === '(') {
+            level++;
+        }
+    }
+    return res;
+};
 
 ```
 
