--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10291,7 +10291,8 @@ console.log(result);
 
 ---
 
-468. 验证IP地址
+## 468. 验证IP地址
+
 给定一个字符串 queryIP。如果是有效的 IPv4 地址，返回 "IPv4" ；如果是有效的 IPv6 地址，返回 "IPv6" ；如果不是上述类型的 IP 地址，返回 "Neither" 。
 
 有效的IPv4地址 是 “x1.x2.x3.x4” 形式的IP地址。 其中 0 <= xi <= 255 且 xi 不能包含 前导零。例如: “192.168.1.1” 、 “192.168.1.0” 为有效IPv4地址， “192.168.01.1” 为无效IPv4地址; “192.168.1.00” 、 “192.168@1.1” 为无效IPv4地址。
@@ -10307,18 +10308,66 @@ xi 是一个 十六进制字符串 ，可以包含数字、小写英文字母( '
 
 queryIP 仅由英文字母，数字，字符 '.' 和 ':' 组成。
 
-```
+```js
 /**
  * @param {string} queryIP
  * @return {string}
  */
 var validIPAddress = function(queryIP) {
+    const ans = ["IPv4", "IPv6", "Neither"];
+    if (/[^a-fA-F0-9.:]/g.test(queryIP)) {
+        //如果匹配到其他字符
+        return ans[2];
+    }
+    if (queryIP.indexOf(".") !== -1) {
+        //判断是否是Ipv4
+        queryIP = queryIP.split(".");
+        if (queryIP.length === 4) {
+            for (let i = 0; i < 4; i++){
+                let num = queryIP[i];
+                if (num.indexOf("e") !== -1) {
+                    return ans[2];
+                }
+                if ( num === "0" || (num[0] !== "0" && !isNaN(Number(num)) && Number(num) > 0 && Number(num) <= 255)) {
+                    //
+                }else{
+                    return ans[2];
+                }
+            }
+            return ans[0];
+        }else{
+            return ans[2];
+        }
 
+    }else if (queryIP.indexOf(":") !== -1) {
+        //判断是否是IPv6
+        queryIP = queryIP.split(":");
+        if (queryIP.length === 8) {
+            for (let i = 0; i < 8; i++){
+                let num = queryIP[i];
+                if (num.length > 0 && num.length < 5) {
+                    //
+                }else{
+                    return ans[2];
+                }
+            }
+            return ans[1];
+        }else{
+            return ans[2];
+        }
+    }else{
+        return ans[2];
+    }
 };
 
-let queryIP = "2001:0db8:85a3:0:0:8A2E:0370:7334";
+let queryIP = "1e1.4.5.6";
 let result = validIPAddress(queryIP);
 console.log(result);
+
+```
+
+```
+
 ```
 
 
