--- a/HTTP/请求数据.md
+++ b/HTTP/请求数据.md
@@ -1945,3 +1945,247 @@ oReq.send(null);
 
 ---
 
+# WebSocket
+
+`WebSocket` 对象提供了用于创建和管理 [WebSocket](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSockets_API) 连接，以及可以通过该连接发送和接收数据的 API。
+
+使用` WebSocket()`[ ](https://developer.mozilla.org/en-US/docs/Web/API/WebSocket/WebSocket)构造函数来构造一个` WebSocket` 。
+
+## [构造函数](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket#构造函数)
+
+- [`WebSocket(url[, protocols\])`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/WebSocket)
+
+  返回一个 `WebSocket` 对象。
+
+## [常量](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket#常量)
+
+| **Constant**           | **Value** |
+| ---------------------- | --------- |
+| `WebSocket.CONNECTING` | `0`       |
+| `WebSocket.OPEN`       | `1`       |
+| `WebSocket.CLOSING`    | `2`       |
+| `WebSocket.CLOSED`     | `3`       |
+
+## [属性](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket#属性)
+
+- [`WebSocket.binaryType`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/binaryType)
+
+  使用二进制的数据类型连接。
+
+- [`WebSocket.bufferedAmount`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/bufferedAmount) 只读
+
+  未发送至服务器的字节数。
+
+- [`WebSocket.extensions`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/extensions) 只读
+
+  服务器选择的扩展。
+
+- [`WebSocket.onclose`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/close_event)
+
+  用于指定连接关闭后的回调函数。
+
+- [`WebSocket.onerror`](https://developer.mozilla.org/zh-CN/docs/conflicting/Web/API/WebSocket/error_event)
+
+  用于指定连接失败后的回调函数。
+
+- [`WebSocket.onmessage`](https://developer.mozilla.org/zh-CN/docs/conflicting/Web/API/WebSocket/message_event)
+
+  用于指定当从服务器接受到信息时的回调函数。
+
+- [`WebSocket.onopen`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/open_event)
+
+  用于指定连接成功后的回调函数。
+
+- [`WebSocket.protocol`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/protocol) 只读
+
+  服务器选择的下属协议。
+
+- [`WebSocket.readyState`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/readyState) 只读
+
+  当前的链接状态。
+
+- [`WebSocket.url`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/url) 只读
+
+  WebSocket 的绝对路径。
+
+## [方法](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket#method_overview)
+
+- [`WebSocket.close([code[, reason\]])`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/close)
+
+  关闭当前链接。
+
+- [`WebSocket.send(data)`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/send)
+
+  对要传输的数据进行排队。
+
+## [事件](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket#事件)
+
+使用 `addEventListener()` 或将一个事件监听器赋值给本接口的 `on*eventname*` 属性，来监听下面的事件。
+
+- [`close`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/close_event)
+
+  当一个 `WebSocket` 连接被关闭时触发。 也可以通过 [`onclose`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/close_event) 属性来设置。
+
+- [`error`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/error_event)
+
+  当一个 `WebSocket` 连接因错误而关闭时触发，例如无法发送数据时。 也可以通过 [`onerror`](https://developer.mozilla.org/zh-CN/docs/conflicting/Web/API/WebSocket/error_event) 属性来设置.
+
+- [`message`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/message_event)
+
+  当通过 `WebSocket` 收到数据时触发。 也可以通过 [`onmessage`](https://developer.mozilla.org/zh-CN/docs/conflicting/Web/API/WebSocket/message_event) 属性来设置。
+
+- [`open`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/open_event)
+
+  当一个 `WebSocket` 连接成功时触发。 也可以通过 [`onopen`](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket/open_event) 属性来设置。
+
+## [示例](https://developer.mozilla.org/zh-CN/docs/Web/API/WebSocket#attributes)
+
+```js
+// Create WebSocket connection.
+const socket = new WebSocket('ws://localhost:8080');
+
+// Connection opened
+socket.addEventListener('open', function (event) {
+    socket.send('Hello Server!');
+});
+
+// Listen for messages
+socket.addEventListener('message', function (event) {
+    console.log('Message from server ', event.data);
+});
+```
+
+---
+
+# 同步和异步请求
+
+`XMLHttpRequest` 支持同步和异步通信。但是，一般来说，出于性能原因，异步请求应优先于同步请求。
+
+同步请求阻止代码的执行，这会导致屏幕上出现“冻结”和无响应的用户体验。
+
+## [异步请求](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#异步请求)
+
+如果你使用`XMLHttpRequest`发送异步请求,**那么当请求的响应数据完全收到之时，会执行一个指定的回调函数**，而在执行异步请求的同时,浏览器会正常地执行其他事务的处理。
+
+### [例子：在控制台输出页面源文件](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#例子：在控制台输出页面源文件)
+
+这个例子演示了如何进行一个简单的异步请求。
+
+```js
+  const xhr = new XMLHttpRequest();
+
+  xhr.open("GET", "http://127.0.0.1/test/genomefile.txt", true);
+
+  xhr.onload = function(e){
+    if (xhr.readyState === 4) {
+      if (xhr.status === 200) {
+        console.log(xhr.responseText);
+      }else{
+        console.error(xhr.statusText);
+      }
+    }
+  };
+
+  xhr.onerror = function(e){
+    console.error(xhr.statusText);
+  };
+
+  xhr.send();
+```
+
+第2行中指定第三个参数为`true`，`表示该请求`应该以**异步模式**执行。
+
+第3行创建一个事件处理函数对象，并将其分配给请求的`onload`属性。此处理程序查看请求的`readyState`，以查看事务是否在第4行完成，如果是，并且HTTP状态为200，则转储接收到的内容。如果发生错误，则显示错误消息。
+
+第15行实际上启动了请求。**只要请求的状态发生变化，就会调用回调程序。**
+
+### [例子：创建一个标准的方法来读取外部文件](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#例子：创建一个标准的方法来读取外部文件)
+
+在一些需求情况下,必须读取多个外部文件. 这是一个标准的函数. 该函数使用`XMLHttpRequest`对象进行异步请求.而且可以为每个文件读取完成后指定不同的回调函数.
+
+```js
+  function xhrSuccess() {
+    this.callback.apply(this, this.arguments);
+  }
+
+  function xhrError() {
+    console.error(this.statusText);
+  }
+
+  function loadFile(url, callback){
+    const xhr = new XMLHttpRequest();
+    xhr.callback = callback;
+    xhr.arguments = Array.prototype.slice.call(arguments, 2);
+    xhr.onload = xhrSuccess;
+    xhr.onerror = xhrError;
+    xhr.open("GET", url, true);
+    xhr.send(null);
+  }
+
+  function showMessage(message){
+    console.log(message + this.responseText);
+  }
+
+  loadFile("http://127.0.0.1/test/genomefile.txt", showMessage, "New message!\n\n");
+```
+
+实用函数loadFile的签名声明（i）要读取的目标URL（通过HTTP GET），（ii）成功完成XHR操作时执行的函数，以及（iii）任意列表的附加参数“通过“XHR对象到成功回调函数。
+
+第1行声明XHR操作成功完成时调用的函数。它又调用已经分配给XHR对象（第7行）属性的loadFile函数（本例中为函数showMessage）的调用中指定的回调函数。提供给调用函数loadFile的附加参数（如果有的话）被“应用”到回调函数的运行中。
+
+第5行声明XHR操作无法成功完成时调用的函数。
+
+第7行存储XHR对象，成功回调函数作为loadFile的第二个参数给出。
+
+第12行将参数赋给loadFile的调用。从第三个参数开始，收集所有剩余的参数，分配给变量xhr的arguments属性，传递给成功回调函数xhrSuccess，最终提供给函数调用的回调函数（在本例中为showMessage） xhrSuccess。
+
+第15行为其第三个参数指定了true，表示该请求应该被异步处理。
+
+第16行实际启动请求。
+
+### [例子：使用超时](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#例子：使用超时)
+
+你可以使用一个超时设置,来**避免你的代码为了等候读取请求的返回数据长时间执行**.超时毫秒数可以通过为`XMLHttpRequest`对象的`timeout` 属性赋值来指定：
+
+```js
+  function xhrSuccess() {
+    if (this.readyState === 4) {
+      if (this.status === 200) {
+        this.callback.apply(this, this.arguments);
+      }
+    }
+  }
+
+  function xhrError() {
+    console.error(this.statusText);
+  }
+  function xhrTimeout() {
+    console.error("The request for " + url + " timed out.");
+  }
+
+  function loadFile(url, timeout, callback){
+    const xhr = new XMLHttpRequest();
+
+    xhr.callback = callback;
+    xhr.arguments = Array.prototype.slice.call(arguments, 3);
+    xhr.onload = xhrSuccess;
+    xhr.onerror = xhrError;
+    xhr.ontimeout = xhrTimeout;
+
+    xhr.open("GET", url, true);
+    xhr.send(null);
+  }
+
+  function showMessage(message){
+    console.log(message + this.responseText);
+  }
+
+  loadFile("http://127.0.0.1/test/genomefile.txt", 2000, showMessage, "New message!\n\n");
+```
+
+你还可以为`timeout`事件的`ontimeout`事件句柄指定事件处理函数。
+
+如上，我们指定的超时时间为 2000 ms。
+
+`timeout`属性添加于Gecko 12.0  Gecko 12.0。
+
